# weather-app-django-react

./: .gitignore  README.md  package-lock.json  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/common/: ErrorMessage.jsx  Footer.jsx  Header.jsx  LoadingSpinner.jsx
frontend/src/components/weather/: HourlyForecast.jsx  HourlyForecastCard.jsx  WeatherCard.jsx
frontend/src/hooks/: useWeather.js
frontend/src/pages/: Main.jsx
frontend/src/store/: weatherStore.js
location/: services.py
weather/: services.py  urls.py  views.py
